[gd_scene load_steps=14 format=3 uid="uid://bkqwx8yjnm7cp"]

[ext_resource type="Script" uid="uid://d3r5i1wqfj4ky" path="res://shell/scripts/player_controller.gd" id="1_player_controller"]
[ext_resource type="Script" uid="uid://bcuyoile8ks05" path="res://shell/scripts/window_display.gd" id="2_window_display"]
[ext_resource type="Script" uid="uid://b0h1aqxyc705e" path="res://shell/scripts/window_interaction.gd" id="3_window_interaction"]
[ext_resource type="PackedScene" uid="uid://bcjxm5yvp8cqb" path="res://shell/scenes/inventory_menu.tscn" id="4_inventory_menu"]
[ext_resource type="Script" uid="uid://3ov8uh2vq4j4" path="res://shell/building/scripts/building_system.gd" id="5_building_system"]
[ext_resource type="PackedScene" path="res://shell/building/scenes/building_ui.tscn" id="6_building_ui"]
[ext_resource type="Script" uid="uid://qbdac64bjiug" path="res://shell/filesystem/filesystem_generator.gd" id="7_filesystem"]
[ext_resource type="Script" uid="uid://yhjlxittj1u6" path="res://shell/scripts/window_taskbar.gd" id="8_taskbar"]
[ext_resource type="Script" path="res://shell/scripts/mode_manager.gd" id="9_mode_manager"]
[ext_resource type="Script" path="res://shell/scripts/window_2d_manager.gd" id="10_window_2d_manager"]
[ext_resource type="Script" path="res://shell/scripts/panel_manager.gd" id="11_panel_manager"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_3f4o0"]
sky_top_color = Color(0.305882, 0.756863, 0.996078, 1)
sky_horizon_color = Color(1, 0.491837, 0.0581879, 1)
sky_curve = 0.0326457

[sub_resource type="Sky" id="Sky_he7gk"]
sky_material = SubResource("ProceduralSkyMaterial_3f4o0")

[sub_resource type="Environment" id="Environment_k3x0h"]
background_mode = 2
sky = SubResource("Sky_he7gk")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_player"]
radius = 0.4
height = 1.8

[node name="Main" type="Node3D"]

[node name="ModeManager" type="Node" parent="."]
script = ExtResource("9_mode_manager")

[node name="X11Compositor" type="X11Compositor" parent="."]

[node name="FileSystemGenerator" type="Node3D" parent="."]
script = ExtResource("7_filesystem")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_k3x0h")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 5, 0)
shadow_enabled = true

[node name="Player" type="CharacterBody3D" parent="." groups=["player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 3)
script = ExtResource("1_player_controller")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_player")

[node name="Camera" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0)

[node name="WindowDisplay" type="Node3D" parent="."]
script = ExtResource("2_window_display")
compositor_path = NodePath("../X11Compositor")
camera_path = NodePath("../Player/Camera")
filesystem_generator_path = NodePath("../FileSystemGenerator")

[node name="WindowInteraction" type="Node3D" parent="."]
script = ExtResource("3_window_interaction")
camera_path = NodePath("../Player/Camera")
compositor_path = NodePath("../X11Compositor")

[node name="InventoryMenu" parent="." instance=ExtResource("4_inventory_menu")]
compositor_path = NodePath("../X11Compositor")
window_interaction_path = NodePath("../WindowInteraction")

[node name="BuildingSystem" type="Node3D" parent="."]
script = ExtResource("5_building_system")
camera_path = NodePath("../Player/Camera")
placement_range = 10.0

[node name="BuildingUI" parent="." instance=ExtResource("6_building_ui")]
building_system_path = NodePath("../BuildingSystem")

[node name="Window2DManager" type="CanvasLayer" parent="."]
script = ExtResource("10_window_2d_manager")
compositor_path = NodePath("../X11Compositor")
mode_manager_path = NodePath("../ModeManager")

[node name="PanelManager" type="CanvasLayer" parent="."]
script = ExtResource("11_panel_manager")

[node name="WindowTaskbar" type="CanvasLayer" parent="."]
script = ExtResource("8_taskbar")
compositor_path = NodePath("../X11Compositor")
filesystem_generator_path = NodePath("../FileSystemGenerator")
window_display_path = NodePath("../WindowDisplay")
player_path = NodePath("../Player")
